added images and sections

--- a/app/index.html
+++ b/app/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>ProjGeoguess</title>
 
     <!-- build:css styles/vendor.css -->
@@ -15,7 +16,24 @@
   </head>
 
   <body>
-    <h1>Time to start prototyping!</h1>
+
+<!--         <section class="bg-img">
+      <img src="/images/toronto-2560x2048.jpg">
+    </section> -->
+    <div class="top-page">
+    <header>
+      <section class="header-icon">TOChallenge</section>
+      <section class="header-filler">header...could be empty</section>
+      <section class="header-signup">Sign Up</section>
+    </header>
+
+    <section class="PageHeading">
+      <h1 id="PageHeading">Let's Play</h1>
+    </section>
+  </div>
+<!--  -->
+
+    
 
     <!-- build:js scripts/main.js -->
     <script src="../bower_components/jquery/dist/jquery.js"></script>
