--- a/app/index.html
+++ b/app/index.html
@@ -20,17 +20,17 @@
 <!--         <section class="bg-img">
       <img src="/images/toronto-2560x2048.jpg">
     </section> -->
-    <div class="top-page">
-    <header>
-      <section class="header-icon">TOChallenge</section>
-      <section class="header-filler">header...could be empty</section>
-      <section class="header-signup">Sign Up</section>
-    </header>
+    <section class="top-page bg-img">
+      <header class="page-header">
+        <div class="header-icon">TOChallenge</div>
+        <div class="header-filler">header...could be empty</div>
+        <div class="header-signup">Sign Up</div>
+      </header>
 
-    <section class="PageHeading">
-      <h1 id="PageHeading">Let's Play</h1>
+      <article class="lets-play">
+        <h1 id="PageHeading">Let's Play</h1>
+      </article>
     </section>
-  </div>
 <!--  -->
 
     
